--- a/openstack-dashboard/dashboard/templates/base.html
+++ b/openstack-dashboard/dashboard/templates/base.html
@@ -20,7 +20,7 @@
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-tabs.js" type="text/javascript" charset="utf-8"></script>
     <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/application.js' type='text/javascript'></script>
     <link href='{{ STATIC_URL }}dashboard/css/bootstrap.css' media='screen' rel='stylesheet' />
-    <link href='{{ STATIC_URL }}dashboard/css/newstyle.css' media='screen' rel='stylesheet' />
+    <link href='{{ STATIC_URL }}dashboard/css/style.css' media='screen' rel='stylesheet' />
     <link href='{{ STATIC_URL }}dashboard/css/chosen.css' media='screen' rel='stylesheet' />
     <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/images/favicon.ico"/>
     {% block headerjs %}{% endblock %}
