--- a/horizon/horizon/dashboards/nova/templates/nova/images/_update.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images/_update.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}update_image_form{% endblock %}
-{% block form_action %}{% url horizon:nova:image:update %}{% endblock %}
+{% block form_action %}{% url horizon:nova:images:update image.id %}{% endblock %}
 
 {% block modal-header %}Update Image{% endblock %}
 
