--- a/horizon/horizon/templates/horizon/_messages.html
+++ b/horizon/horizon/templates/horizon/_messages.html
@@ -1,21 +1,21 @@
 {% load i18n %}
 {% for message in messages %}
-  {% if message.tags == "info" %}
+  {% if "info" in message.tags %}
     <div class="alert-message info">
       <p><strong>{% trans "Info: " %}</strong>{{ message }}</p>
     </div>
   {% endif %}
-  {% if message.tags == "warning" %}
+  {% if "warning" in message.tags %}
     <div class="alert-message warning">
       <p><strong>{% trans "Warning: " %}</strong>{{ message }}</p>
     </div>
   {% endif %}
-  {% if message.tags == "success" %}
+  {% if "success" in message.tags %}
     <div class="alert-message success">
       <p><strong>{% trans "Success: " %}</strong>{{ message }}</p>
     </div>
   {% endif %}
-  {% if message.tags == "error" %}
+  {% if "error" in message.tags %}
     <div class="alert-message error">
       <p><strong>{% trans "Error: " %}</strong>{{ message }}</p>
     </div>
