--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/resource.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/resource.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Resource Detail" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Resource Detail: ")|add:resource.logical_resource_id %}
+  {% include "horizon/common/_page_header.html" with title=_("Resource Detail: ")|add:resource.resource_name %}
 {% endblock page_header %}
 
 {% block main %}
