--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/index.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/index.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Resources usage Overview" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Resources usage Overview")%}
+  {% include "horizon/common/_page_header.html" with title=_("Resources Usage Overview")%}
 {% endblock page_header %}
 
 {% block main %}
